--- a/client/dev/partials/projects/list.html
+++ b/client/dev/partials/projects/list.html
@@ -4,7 +4,7 @@
 	<span translate="project.create"></span>
 </a>
 
-<div class="pull-right" tooltip="{{'project.cant_create'|translate}}" tooltip-placement="left" acl-lacks-project-creation style="cursor: not-allowed">
+<div class="pull-right" acl-lacks-project-creation style="cursor: not-allowed">
 	<a class="btn btn-primary disabled">
 		<i class="fa fa-plus"></i>
 		<span translate="project.create"></span>
@@ -41,7 +41,7 @@
 		</tr>
 		<tr ng-repeat="project in projects|orderBy:pred:rev">
 			<td>{{project.country}}</td>
-			<td><a ui-sref="main.project.structure.basics({projectId: project._id})">{{project.name}}</a></td>
+			<td><a ng-click="open(project._id)">{{project.name}}</a></td>
 			<td>{{project.themes|getObjects:themes|pluck:'name'|pluck:language|join:', '}}</td>
 			<td>{{project.start|date}}</td>
 			<td>{{project.end|date}}</td>
