--- a/client/dev/partials/projects/structure/collection-form-list.html
+++ b/client/dev/partials/projects/structure/collection-form-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name|maxLength:50"></a></li>
+	<li><a ui-sref="main.project.structure.basics" ng-bind="masterProject.name|maxLength:50"></a></li>
 	<li class="active" translate="project.collection_form_list"></li>
 </ol>
 
@@ -20,13 +20,13 @@
 			<th translate="project.collect"></th>
 		</tr>
 	</thead>
-	<tbody ng-if="project.forms.length == 0">
+	<tbody ng-if="editableProject.forms.length == 0">
 		<tr>
 			<td colspan="7" style="text-align: center" translate="project.no_forms"></td>
 		</tr>
 	</tbody>
-	<tbody ng-if="project.forms.length != 0" ng-sortable="{handle: '.handle'}">
-		<tr ng-repeat="form in project.forms">
+	<tbody ng-if="editableProject.forms.length != 0" ng-sortable="{handle: '.handle'}">
+		<tr ng-repeat="form in editableProject.forms">
 			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 			<td>
 				<a ui-sref="main.project.structure.collection_form_edition({formId: form.id})">
