--- a/client/dev/partials/projects/structure/collection-site-list.html
+++ b/client/dev/partials/projects/structure/collection-site-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name|maxLength:50"></a></li>
+	<li><a ui-sref="main.project.structure.basics" ng-bind="masterProject.name|maxLength:50"></a></li>
 	<li class="active" translate="project.collection_site_list"></li>
 </ol>
 
@@ -21,13 +21,13 @@
 				<th style="width: 30px"></th>
 			</tr>
 		</thead>
-		<tbody ng-if="project.entities.length == 0">
+		<tbody ng-if="editableProject.entities.length == 0">
 			<tr>
 				<td colspan="4" style="text-align: center" translate="project.no_input_entities"></td>
 			</tr>
 		</tbody>
-		<tbody ng-if="project.entities.length != 0" ng-sortable="{handle: '.handle'}">
-			<tr ng-repeat="inputEntity in project.entities track by inputEntity.id">
+		<tbody ng-if="editableProject.entities.length != 0" ng-sortable="{handle: '.handle'}">
+			<tr ng-repeat="inputEntity in editableProject.entities track by inputEntity.id">
 				<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 
 				<td>
@@ -43,10 +43,10 @@
 					</ng-form>
 				</td>
 				<td>
-					<optional-date ng-model="inputEntity.start" default="project.start" message="project.same_as_start"></optional-date>
+					<optional-date ng-model="inputEntity.start" default="editableProject.start" message="project.same_as_start"></optional-date>
 				</td>
 				<td>
-					<optional-date ng-model="inputEntity.end" default="project.end" message="project.same_as_end"></optional-date>
+					<optional-date ng-model="inputEntity.end" default="editableProject.end" message="project.same_as_end"></optional-date>
 				</td>
 				<td style="text-align: right">
 					<a class="btn btn-danger btn-sm" ng-click="deleteEntity(inputEntity.id)">
@@ -78,13 +78,13 @@
 				<th style="width: 30px;"></th>
 			</tr>
 		</thead>
-		<tbody ng-if="project.groups.length == 0">
+		<tbody ng-if="editableProject.groups.length == 0">
 			<tr>
 				<td colspan="4" style="text-align: center" translate="project.no_input_groups"></td>
 			</tr>
 		</tbody>
-		<tbody ng-if="project.groups.length != 0" ng-sortable="{handle: '.handle'}">
-			<tr ng-repeat="inputGroup in project.groups track by inputGroup.id">
+		<tbody ng-if="editableProject.groups.length != 0" ng-sortable="{handle: '.handle'}">
+			<tr ng-repeat="inputGroup in editableProject.groups track by inputGroup.id">
 				<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 
 				<td>
@@ -103,7 +103,7 @@
 				<td>
 					<ui-select multiple ng-model="inputGroup.members" theme="bootstrap">
 						<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
-						<ui-select-choices repeat="inputEntity.id as inputEntity in project.entities">
+						<ui-select-choices repeat="inputEntity.id as inputEntity in editableProject.entities">
 							{{inputEntity.name}}
 						</ui-select-choices>
 					</ui-select>
