--- a/client/dev/partials/projects/structure/logframe-list.html
+++ b/client/dev/partials/projects/structure/logframe-list.html
@@ -1,6 +1,6 @@
 <ol class="breadcrumb">
 	<li ng-if="userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li><a ui-sref="main.project.structure.basics" ng-bind="project.name|maxLength:50"></a></li>
+	<li><a ui-sref="main.project.structure.basics" ng-bind="masterProject.name|maxLength:50"></a></li>
 	<li class="active" translate="shared.logical_frames"></li>
 </ol>
 
@@ -16,13 +16,13 @@
 			<th translate="project.goal"></th>
 		</tr>
 	</thead>
-	<tbody ng-if="project.logicalFrames.length == 0">
+	<tbody ng-if="editableProject.logicalFrames.length == 0">
 		<tr>
 			<td colspan="3" style="text-align: center" translate="project.no_logical_frames"></td>
 		</tr>
 	</tbody>
-	<tbody ng-if="project.logicalFrames.length != 0" ng-sortable="{handle: '.handle'}">
-		<tr ng-repeat="(index, logicalFrame) in project.logicalFrames">
+	<tbody ng-if="editableProject.logicalFrames.length != 0" ng-sortable="{handle: '.handle'}">
+		<tr ng-repeat="(index, logicalFrame) in editableProject.logicalFrames">
 			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
 			<td>
 				<a ui-sref="main.project.structure.logical_frame_edition({index: index})">
