--- a/client/dev/partials/projects/structure/partition-modal.html
+++ b/client/dev/partials/projects/structure/partition-modal.html
@@ -2,25 +2,101 @@
 
 	<form class="form-horizontal" name="partitionForm">
 
-		<legend translate="project.partition_general"></legend>
+		<legend translate="project.partition_edit"></legend>
 
 		<div class="form-group">
 			<label for="input-partition-name" class="col-sm-2 control-label" translate="shared.name"></label>
 			<div class="col-sm-10">
-				<input id="input-partition-name" type="text" class="form-control" name="name" ng-model="partition.name" placeholder="{{'project.partition_general_placeholder'|translate}}" required />
+				<input id="input-partition-name"
+					   type="text"
+					   class="form-control"
+					   name="name"
+					   ng-model="partition.name"
+					   placeholder="{{'project.partition_general_placeholder'|translate}}"
+					   required />
+
+
+				<p class="help-block">
+					<i class="fa fa-info-circle"></i>
+					<span translate="project.partition_help_name"></span>
+				</p>
 			</div>
 		</div>
 
 		<div class="form-group">
-			<label for="input-partition-aggregation" class="col-sm-2 control-label" translate="project.aggregation"></label>
+			<label class="col-sm-2 control-label" translate="project.partition_elements"></label>
+			<div class="col-sm-10">
+				<table class="table table-bordered table-stripped table-condensed">
+					<thead>
+						<tr>
+							<th style="width: 30px"></th>
+							<th translate="project.partition_name"></th>
+							<th style="width: 30px"></th>
+						</tr>
+					</thead>
+					<tbody ng-if="partition.elements.length == 0">
+						<tr>
+							<td colspan="3" style="text-align: center" translate="project.no_partition_elements"></td>
+						</tr>
+					</tbody>
+					<tbody ng-if="partition.elements.length != 0" ng-sortable="{handle: '.handle'}">
+						<tr ng-repeat="partitionElement in partition.elements track by partitionElement.id">
+							<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
+
+							<td>
+								<ng-form name="center">
+									<div class="form-group" style="margin: 0">
+										<input type="text"
+											   name="name"
+											   ng-model="partitionElement.name"
+											   class="form-control input-sm"
+											   placeholder="{{'project.partition_name_placeholder'|translate}}"
+											   required />
+									</div>
+								</ng-form>
+							</td>
+
+							<td style="text-align: right">
+								<a class="btn btn-danger btn-sm" ng-click="deletePartitionElement(partitionElement.id)">
+									<i class="fa fa-remove"></i>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="3" style="text-align: center">
+								<a class="btn btn-default btn-xs" ng-click="createPartitionElement()">
+									<i class="fa fa-plus"></i>
+									<span translate="shared.add"></span>
+								</a>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
+
+				<p class="help-block">
+					<i class="fa fa-info-circle"></i>
+					<span translate="project.partition_help_elements"></span>
+				</p>
+			</div>
+		</div>
+		
+		<div class="form-group">
+			<label for="input-partition-aggregation" class="col-sm-2 control-label" translate="project.aggregation_lab"></label>
 			<div class="col-sm-10">
 				<select id="input-partition-aggregation" ng-model="partition.aggregation" class="form-control">
-					<option value="none" translate="project.none"></option>
-					<option value="sum" translate="project.sum"></option>
-					<option value="average" translate="project.average"></option>
-					<option value="highest" translate="project.highest"></option>
-					<option value="lowest" translate="project.lowest"></option>
+					<option value="none" translate="project.aggregation.none"></option>
+					<option value="sum" translate="project.aggregation.sum"></option>
+					<option value="average" translate="project.aggregation.average"></option>
+					<option value="highest" translate="project.aggregation.highest"></option>
+					<option value="lowest" translate="project.aggregation.lowest"></option>
 				</select>
+
+				<p class="help-block">
+					<i class="fa fa-info-circle"></i>
+					<span translate="project.partition_help_aggregation"></span>
+				</p>
 			</div>
 		</div>
 
@@ -28,122 +104,74 @@
 			<label for="input-partition-use-groups" class="col-sm-2 control-label" translate="project.groups"></label>
 			<div class="col-sm-10">
 				<input id="input-partition-use-groups" type="checkbox" name="groups" ng-model="useGroups" />
+				<label for="input-partition-use-groups" translate="project.use_groups" style="font-weight: normal"></label>
+
+				<table class="table table-bordered table-stripped table-condensed" ng-if="useGroups">
+					<thead>
+						<tr>
+							<th style="width: 30px"></th>
+							<th style="width: 300px" translate="project.partition_group_name"></th>
+							<th translate="shared.members"></th>
+							<th style="width: 30px;"></th>
+						</tr>
+					</thead>
+					<tbody ng-if="partition.groups.length == 0">
+						<tr>
+							<td colspan="4" style="text-align: center" translate="project.no_partition_groups"></td>
+						</tr>
+					</tbody>
+					<tbody ng-if="partition.groups.length != 0" ng-sortable="{handle: '.handle'}">
+						<tr ng-repeat="partitionGroup in partition.groups track by partitionGroup.id">
+							<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
+
+							<td>
+								<ng-form name="center">
+									<div class="form-group" style="margin: 0">
+										<input type="text"
+											   name="name"
+											   placeholder="{{'project.partition_group_name_placeholder'|translate}}"
+											   ng-model="partitionGroup.name"
+											   class="form-control error input-sm"
+											   required />
+									</div>
+								</ng-form>
+							</td>
+							
+							<td>
+								<ui-select multiple ng-model="partitionGroup.members" theme="bootstrap">
+									<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
+									<ui-select-choices repeat="partitionElement.id as partitionElement in partition.elements">
+										{{partitionElement.name}}
+									</ui-select-choices>
+								</ui-select>
+							</td>
+
+							<td style="text-align: right">
+								<a class="btn btn-danger btn-sm" ng-click="deleteGroup(partitionGroup.id)">
+									<i class="fa fa-remove"></i>
+								</a>
+							</td>
+						</tr>
+					</tbody>
+					<tfoot>
+						<tr>
+							<td colspan="4" style="text-align: center">
+								<a class="btn btn-default btn-xs" ng-click="createGroup()">
+									<i class="fa fa-plus"></i>
+									<span translate="shared.add"></span>
+								</a>
+							</td>
+						</tr>
+					</tfoot>
+				</table>
+
+
+				<p class="help-block">
+					<i class="fa fa-info-circle"></i>
+					<span translate="project.partition_help_groups"></span>
+				</p>
 			</div>
 		</div>
-		
-		<legend translate="project.partition_elements"></legend>
-
-		<table class="table table-bordered table-stripped table-condensed">
-			<thead>
-				<tr>
-					<th style="width: 30px"></th>
-					<th translate="project.partition_name"></th>
-					<th style="width: 30px"></th>
-				</tr>
-			</thead>
-			
-			<tbody ng-if="partition.elements.length == 0">
-				<tr>
-					<td colspan="3" style="text-align: center" translate="project.no_partition_elements"></td>
-				</tr>
-			</tbody>
-
-			<tbody ng-if="partition.elements.length != 0" ng-sortable="{handle: '.handle'}">
-				<tr ng-repeat="partitionElement in partition.elements track by partitionElement.id">
-					<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
-
-					<td>
-						<ng-form name="center">
-							<div class="form-group" style="margin: 0">
-								<input type="text"
-									   name="name"
-									   ng-model="partitionElement.name"
-									   class="form-control input-sm"
-									   placeholder="{{'project.partition_name_placeholder'|translate}}"
-									   required />
-							</div>
-						</ng-form>
-					</td>
-
-					<td style="text-align: right">
-						<a class="btn btn-danger btn-sm" ng-click="deletePartitionElement(partitionElement.id)">
-							<i class="fa fa-remove"></i>
-						</a>
-					</td>
-				</tr>
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="3" style="text-align: center">
-						<a class="btn btn-default btn-xs" ng-click="createPartitionElement()">
-							<i class="fa fa-plus"></i>
-							<span translate="shared.add"></span>
-						</a>
-					</td>
-				</tr>
-			</tfoot>
-		</table>
-
-		<legend translate="project.partition_groups" ng-if="useGroups"></legend>
-
-		<table class="table table-bordered table-stripped table-condensed" ng-if="useGroups">
-			<thead>
-				<tr>
-					<th style="width: 30px"></th>
-					<th style="width: 300px" translate="project.partition_group_name"></th>
-					<th translate="shared.members"></th>
-					<th style="width: 30px;"></th>
-				</tr>
-			</thead>
-			<tbody ng-if="partition.groups.length == 0">
-				<tr>
-					<td colspan="4" style="text-align: center" translate="project.no_partition_groups"></td>
-				</tr>
-			</tbody>
-			<tbody ng-if="partition.groups.length != 0" ng-sortable="{handle: '.handle'}">
-				<tr ng-repeat="partitionGroup in partition.groups track by partitionGroup.id">
-					<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
-
-					<td>
-						<ng-form name="center">
-							<div class="form-group" style="margin: 0">
-								<input type="text"
-									   name="name"
-									   placeholder="{{'project.partition_group_name_placeholder'|translate}}"
-									   ng-model="partitionGroup.name"
-									   class="form-control error input-sm"
-									   required />
-							</div>
-						</ng-form>
-					</td>
-					
-					<td>
-						<ui-select multiple ng-model="partitionGroup.members" theme="bootstrap">
-							<ui-select-match placeholder="">{{$item.name}}</ui-select-match>
-							<ui-select-choices repeat="partitionElement.id as partitionElement in partition.elements">
-								{{partitionElement.name}}
-							</ui-select-choices>
-						</ui-select>
-					</td>
-
-					<td style="text-align: right">
-						<a class="btn btn-danger btn-sm" ng-click="deleteGroup(partitionGroup.id)">
-							<i class="fa fa-remove"></i>
-						</a>
-					</td>
-				</tr>
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="4" style="text-align: center">
-						<a class="btn btn-default btn-xs" ng-click="createGroup()">
-							<i class="fa fa-plus"></i>
-							<span translate="shared.add"></span>
-						</a>
-					</td>
-				</tr>
-			</tfoot>
-		</table>
 	</form>
 </div>
 
